# uav_navigation_rc26

./: CMakeLists.txt  README_NEW.md  package.xml
config/: cloud_extruder.yaml  mission.yaml  mission_params.yaml
launch/: advanced_param.xml  ego.rviz  ego_nav.launch  ego_planner_mid360.launch
scripts/: monitor_nodes.sh
shell/: start.sh  start_harry.sh
src/: cloud_extruder.cpp  ego_controller_node.cpp  main_fsm.cpp
